Shift Issues and validations updated

--- a/src/app/attendance/attendance/shift/shift.component.css
+++ b/src/app/attendance/attendance/shift/shift.component.css
@@ -1,5 +1,4 @@
-:host ::ng-deep .pagination .ngx-pagination .current {
-    background: #76bc21 !important;
-    border: transparent !important;
-    border-radius: 20px !important;
-  }
+.colorPicker{
+    position: absolute;
+
+}
